--- a/MultiPlatform/MultiPlatform.uproject
+++ b/MultiPlatform/MultiPlatform.uproject
@@ -7,7 +7,10 @@
 		{
 			"Name": "MultiPlatform",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine"
+			]
 		}
 	]
 }
