--- a/MultiPlatform/Config/DefaultEngine.ini
+++ b/MultiPlatform/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/Lobby.Lobby
-EditorStartupMap=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
+GameDefaultMap=/Game/MenuSystem/MainMenu.MainMenu
+EditorStartupMap=/Game/MenuSystem/MainMenu.MainMenu
 GlobalDefaultGameMode="/Script/MultiPlatform.MultiPlatformGameMode"
 GameInstanceClass=/Script/MultiPlatform.MultiPlatformGameInstance
 
@@ -62,5 +62,4 @@ InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
 
-[OnlineSubsystem] 
-DefaultPlatformService=NULL
+
